# pg-azure-openai-structured-output

./: .gitignore  README.md  pyproject.toml
scripts/: 001-run.py  002-run-to-generate-big-data.py  large_model.py  more_large_model.py
